Configurando conexão com banco de dados das classes Escala e ServicoOperacional e testando a geração da escala de COV.